473 - Data and file storage improvements